# synopsis_classifier

./: README.md  app.py  main.py  pyproject.toml
models/lstm/lstm_classifier_20260305_210551/: metadata.json
models/lstm/lstm_classifier_20260306_000854/: metadata.json
parser/: parser.py
scripts/: predict.py  train.py
src/: model.py  preprocessing.py
